# ratranker

./: .gitignore  README.md  pyproject.toml  requirements.txt  slurm_job.sh
src/: MLproject  python_env.yaml
src/augmentation/: README.md  augment.py  create_rationales.py  examples.py  globals.py  loader.py  prompts.py  sample_data.py
src/datasets/msmarco_50k/: indices.tsv
src/datasets/msmarco_50k/aug_results/: aug_result_0-199.json  aug_result_1000-1199.json  aug_result_10000-10199.json  aug_result_10200-10399.json  aug_result_10400-10599.json  aug_result_10600-10799.json  aug_result_10800-10999.json  aug_result_11000-11199.json  aug_result_11200-11399.json  aug_result_11400-11599.json  aug_result_11600-11799.json  aug_result_11800-11999.json  aug_result_1200-1399.json  aug_result_12000-12199.json  aug_result_12200-12399.json  aug_result_12400-12599.json  aug_result_12600-12799.json  aug_result_12800-12999.json  aug_result_13000-13199.json  aug_result_13200-13399.json  aug_result_13400-13599.json  aug_result_13600-13799.json  (+145 more)
src/evaluation/: README.md  calculate_mrr_script.py  eval_beir.py  eval_preranked.py  ms_marco_eval.py  trec_eval.py
src/exaranker/: README.md  main_trainer.py  utils_exa.py
src/exaranker/eval/: README.md  gen_monoT5out.py  gen_monot5.py  run.py
src/scripts/: calc_wordlength.py  create_test_dev_data.py
src/scripts/text_metrics_evaluation/: README.md  datasets.py  eval_text_metrics_data.py
src/training/: README.md  dataset.py  train.py  training_utils.py
src/utils/: llm.py  loadmodel.py  paths.py  settings.py
(+177 files in other folders)
