[tool.poetry]
name = "masterthesis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.30.4"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
datasets = "^2.19.2"
langchain = "^0.2.3"
langchain-openai = "^0.1.8"
loguru = "^0.7.2"
rank-bm25 = "^0.2.2"
langchain-community = "^0.2.5"
bm25s = "^0.1.7"
jupyter = "^1.0.0"
torch = "^2.3.1"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"
hydra-core = "^1.3.2"
fire = "^0.6.0"
pandas = "^2.2.2"
mlflow = "2.10.2"
transformers = "^4.42.4"
peft = "^0.11.1"
accelerate = "^0.32.1"
bitsandbytes = "^0.43.2"
psutil = "^6.0.0"
pynvml = "^11.5.3"
evaluate = "^0.4.2"
bert-score = "^0.3.13"
nltk = "^3.8.1"
rouge-score = "^0.1.2"
pathlib = "^1.0.1"
ragatouille = "^0.0.8.post4"
huggingface-hub = "^0.25.2"
boto3 = "^1.35.54"
jupyterlab = "4.2.3"
ir-datasets = "^0.5.9"
pytrec-eval = "^0.5"
pytorch-lightning = "^2.4.0"
sentencepiece = "^0.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"